syntax = "proto3";

package packet;


message UDPPacketData{
    uint64 serialNo = 1;
    uint32 totalCnt = 16;
    uint32 posNum = 2;
    uint32 dataType = 3;
    uint32 tryCnt = 17;
    int32 len = 4;
    bytes data = 5;
}

